--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     --header-height: 200px;
     --header-height-min: 100px;
     --nav-height: 65px;
+    --nav-height-min: 40px;
     --footer-height: 100px;
     margin: 0;
 }
@@ -135,6 +136,12 @@ img#logo {
         height: 50px;
         width: 50px;
     }
+    #navbar,
+    .navtext,
+    .menuitem {
+        height: var(--nav-height-min);
+        font-size: 16px;
+    }
 }
 
 #navbar {
@@ -148,6 +155,7 @@ img#logo {
 
 .navtext {
     height: var(--nav-height);
+    width: 100%;
     margin-bottom: 0px;
     margin-top: 0px;
     padding-top: 20px;
@@ -155,8 +163,12 @@ img#logo {
 
 .menuitem {
     border: 2px white solid;
-    height: 65px;
+    height: var(--nav-height);
     background-color: var(--nav-color);
+}
+
+div.dropdown {
+    width: 100%;
 }
 
 .dropdown {
@@ -239,10 +251,12 @@ a {
 
 #introdiv {
     background-color: white;
-    padding-top: 20px;
+    padding: 20px;
+    width: 80%;
+    margin: 0 auto;
 }
 
-#intro {
+.about {
     padding-left: 10%;
     padding-right: 10%;
     display: relative;
